--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Multi Repo Milestones</title>
-    <meta name="description" content="Multi Repo Milestones">
+    <title>Create Milestones - Github</title>
+    <meta name="description" content="Create milestones in multiple github repositories">
     <meta name="author" content="Hardik Sondagar">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
