--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Create Milestones - Github</title>
+    <title>Cross repository milestones on Github</title>
     <meta name="description" content="Create milestones in multiple github repositories">
     <meta name="author" content="Hardik Sondagar">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h2>Create Milestones</h2>
+        <h2>Cross Repository Milestones</h2>
         <input type="text" id="personal_access_token" name="personal_access_token"
             placeholder="Enter Github Personal Access Token" style="width:100%;" autofocus="true" autocomplete="on" />
         <input type="submit" id="load_repos_btn" value="Load Repositories" onclick="load_repos()"
