Convert token input to password for better privacy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h2>Cross Repository Milestones</h2>
-        <input type="text" id="personal_access_token" name="personal_access_token"
+        <input type="password" id="personal_access_token" name="personal_access_token"
             placeholder="Enter Github Personal Access Token" style="width:100%;" autofocus="true" autocomplete="on" />
         <input type="submit" id="load_repos_btn" value="Load Repositories" onclick="load_repos()"
             style="width: 100%;" />
